--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch a scetch</title>
-    <script src="./somejs.js" defer></script>
-    <link rel="stylesheet" href="./style.css">
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="styles/style.css"/>
+  <title>Note</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="./somejs.js" defer></script>
 </head>
 <body>
-    <div class="mainbox">
-
-    </div>
+  <div class="mainbox">
+    
+  </div>
 </body>
 </html>
